tests/fixtures/valid/union_refs.bop
edition = "2026"

struct Metadata {
    version: string;
    timestamp: int64;
}

message Payload {
    data(1): byte[];
}

union Event {
    struct Test {
        name: string;
    }

    Created(1): {
        id: string;
        time: int64;
    };

    Meta(2): Metadata;

    Data(3): Payload;

    Deleted(4): message {
        id(1): string;
    };
}
