tests/fixtures/should_fail/rpc.bop
message Msg {
    name(1): string;
    time(2): date;
    data(3): byte[];
}

service Hello {
    1 -> void world();
    2 -> string[] get_messages(uint32 max);
    4 -> bool check(string name, byte[] hash);
    5 -> Msg respond(Msg input);
}
